Tue Aug 12 10:53:49 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gnubgmodule.c (PythonMatch): Initial version. Incomplete in some
	ways. Documentation missing. Likely to change.

Tue Aug 12 10:37:08 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* positionid.c (PositionFromID): constify some args.
	change CheckPosition and PositionFromID return sane TRUE/FALSE
	(1/0) for success/failure after even Joern was bitten by it in
	PythonPositionFromID.

Mon Aug 11 22:10:08 2003  Joern Thyssen  <jth@gnubg.org>

	* po/LINGUAS po/fr.po: French translation.
	* aclocal.m4, Makefile.in: finish upgrade to gettext 0.12.2

Mon Aug 11 14:06:22 GMT 2003 Jim Segrave    <jes@jes-2.demon.nl>

	* credits.sh, po/LINGUAS po/it.po - Italian translations by
	* Renzo Campagna <renzo.camp@tin.it> & Giulio De Marco
	* <polietilene@tiscalinet.it>

Sun Aug 10 15:04:08 2003  Joern Thyssen  <jth@gnubg.org>

	* htmlimages.c (CommandExportHTMLImages): fix bug:
	(no arrows where drawn for fClockwise=TRUE)
	(reported by Martin Janke)

Thu Aug  7 19:57:42 2003  Joern Thyssen  <jth@gnubg.org>

	* sgf.c (SaveGame): fix for MOVE_SETBOARD records where
	one or both sides has bourne all chequers off.
	(reported by Hugh Sconyers)

Thu Aug  7 19:45:11 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTLMDumpStatcontext): always show Eq. Snowie error rate.
	(reported by Chris Yep)

Thu Aug  7 19:29:35 2003  Joern Thyssen  <jth@gnubg.org>

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): don't show relative fibs rating
	for p>1 or p<0.
	(reported by Kees Van Doel)

Wed Aug  6 20:24:31 2003  Joern Thyssen  <jth@gnubg.org>

	* configure.in, configure: ensure $host is known by envoking
	AC_CANONICAL_HOST.
	(reported by Mike Petch)

Tue Aug  5 21:41:57 GMT 2003  Holger Bochnig <hbgg@gmx.net>

	* gtktheory.c (GTKShowTheory): rearrange theory window so it fits
	  on 800x600

Tue Aug  5 22:59:25 2003  Joern Thyssen  <jth@gnubg.org>
